--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,5 +1,5 @@
 \paragraph{Theoretical contributions}
-The theoretical section of this thesis aimed to present an accessible introduction to the electrodynamics of periodic structures. It started from the fundamental Maxwell equations, developed the concept of waves propagating in vacuum and in resonant media, and showed how the local medium responds to oscillating electric field as a damped oscillator and how it influences the dispersion curves. In the following chapter, the nonlocal response was introduced, and it was described how it causes the material properties to depend not only on the frequency, but also on the magnitude of the wave vector, which is known as spatial dispersion. 
+The theoretical section of this thesis aimed to present an accessible introduction to the electrodynamics of periodic structures. It started from the fundamental Maxwell equations, developed the concept of waves propagating in vacuum and in resonant media, and shown how the local medium responds to oscillating electric field as a damped oscillator and how it influences the dispersion curves. In the following chapter, the nonlocal response was introduced, and it was described how it causes the material properties to depend not only on the frequency, but also on the magnitude of the wave vector, which is known as spatial dispersion. 
 
 This phenomenon is common in optics, but in homogeneous materials it is usually negligible. When the electrodynamics of periodic structures is concerned, the spatial dispersion is often particularly pronounced and should not be neglected. More general shapes of the dispersion curves in spatially-dispersive media were illustrated in several figures. 
 
@@ -10,7 +10,7 @@ The historical part promoted the author's view on the notions of \textit{artific
 
 \paragraph{Methodological contributions}
 The preparation of this thesis, which encompasses over 90 plots that show the results from over 4000 separate computations, necessitated the development of an efficient and convenient platform for numerical simulations of electromagnetic waves in periodic structures.
-The computations are defined in the form of scripts in the Python programming language. At the expense of a possibly slower learning curve than the one programs with a graphical user interface may offer, a great advantage of scripting is a seamless integration with further processing of the simulation results that would otherwise be prohibitively tedious. The scripts can also be modified for automated parametric scans, optimisation of the structure performance and to match experimental data.
+The computations are defined in the form of scripts in the Python programming language. At the expense of a possibly slower learning curve than the programs with a graphical user interface may offer, a great advantage of scripting is a seamless integration with further processing of the simulation results that would otherwise be prohibitively tedious. The scripts can also be modified for automated parametric scans, optimisation of the structure performance and to match experimental data.
 
 All scripts, containing roughly 5000 lines of Python code in total, were published online as open-source software \cite{dominec2014_meep_metamaterials} with the hope that they would be reused by others for future numerical research.
 
@@ -36,24 +36,24 @@ The Results chapter presented an overview of the electromagnetic behaviour of te
 \begin{enumerate}
 \item{It started with a one-dimensional photonic crystal, which can be viewed as the simplest periodic structure. Its dispersion curves consist of alternating photonic bands and band gaps, but no individual resonances can occur. The conditions for the formation of a zero-width photonic band gap are shown in parametric scans. The low-frequency and high-frequency limits for the effective index of refraction are demonstrated.
 } 
-\item{Replacing the dielectric layer with an array of metallic wires parallel to the electric field does not qualitatively change the high-frequency behaviour, but below the plasma frequency, it introduces a plasma-like response with negative effective permittivity. The resulting plasma frequency is determined by the geometry; Fig. \ref{fg_omegap_a} compared the numeric results with analytic models, showing a good match.
+\item{Replacing the dielectric layer with an array of metallic wires parallel to the electric field does not change the high-frequency behaviour qualitatively, but below the plasma frequency, it introduces a plasma-like response with negative effective permittivity. The resulting plasma frequency is determined by the geometry; Fig. \ref{fg_omegap_a} compared the numeric results with analytic models, showing a good match.
 } 
 \item{Periodic gaps in the wires introduce the individual resonances with an electric dipole. Their spectra of effective parameters were described in detail, since they are typical also for resonances in other structures. Parametric scans through wire radius and cut distance were shown to have nontrivial effects on the resonant frequency. Our experimental data from cut-wire array on silicon substrate were compared to numerical model, and the difference was explained as an effect of asymmetry and losses in the real sample. 
 } 
 \item{The individual resonances with an electric dipole were compared to their counterparts with a magnetic dipole forming the fundamental resonance of split-ring resonators. The resonator with a single splitting in the ring is asymmetric, and it was demonstrated that  erroneous results for this structure are retrieved by any homogenisation method that does not account for the asymmetry. The version with a symmetric splitting, however, can be homogenised to obtain negative permeability. Further, a combination of the double-split ring resonator with the wire array was shown to yield the negative index of refraction with compatible results between the s-parameters method a current-driven homogenisation.
 } 
-\item{On the contrary, the discrepancy between these two approaches to homogenisation cannot be neglected when a central shunt conductor is added to a symmetric split-ring resonator. Then the electric type resonance becomes the fundamental one, and by continuous changes in the geometry one  can be tuned the electric and magnetic resonance frequencies. While it might be intuitively expected they would form a region of negative refractive index, the simulations have shown that the spatial dispersion causes the dispersion curves to bend into a concave shape. Detailed plots illustrated that the structure supports multiple modes at the same frequency. Consequently, the scattering-parameter method cannot determine the effective index of refraction.
+\item{On the contrary, the discrepancy between these two approaches to homogenisation cannot be neglected when a central shunt conductor is added to a symmetric split-ring resonator. Then the electric type resonance becomes the fundamental one, and by continuous changes in the geometry one can tune the electric and magnetic resonance frequencies. While it might be intuitively expected that both resonances would form a region of negative refractive index, the simulations shown that the spatial dispersion causes the dispersion curves to bend into a concave shape instead, enabling the structure to support multiple modes at the same frequency. Consequently, the scattering-parameter method cannot determine the effective index of refraction.
 } 
-\item{Dielectric spherical resonators were shown to exhibit individual resonances of Mie type, the first of which is analogous to the resonance in split-ring resonator. With the exactly defined dielectric model of the constituent dielectric, we could deduce minimum dissipative losses that can be achieved in an experiment and shown what impact they have on the resonance spectra. Further we accompanied the computed spectra with our experimental results, arguing that the substantial deviation between these arised from the inhomogeneity of the resonators in the sample. Taking the inhomogeneity into account yielded a reasonable match with the experiment. Extended sieving of the spheres improved the resonance deeper, but no negative permeability was reached.
+\item{Dielectric spherical resonators were shown to exhibit individual resonances of Mie type, the first of which is analogous to the resonance in split-ring resonator. With the exactly defined dielectric model of the constituent dielectric, we could deduce minimum dissipative losses that can be achieved in an experiment and shown what impact they have on the resonance spectra. Further we accompanied the computed spectra with our experimental results, arguing that the substantial deviation between these arose from the inhomogeneity of the resonators in the sample. Taking the inhomogeneity into account yielded a reasonable match with the experiment. Extended sieving of the spheres improved the resonance deeper, but no negative permeability was reached.
 %		\add{Owing to the homogeneous broadening of the resonator resonance, caused by intrinsic losses of TiO$_{2}$, further sieving appears to lack any purpose. Not only this project broadens the numerous group of technically successful research projects pointed in utterly wrong direction, it also classifies into the lamentable subgroup of effort that could be entirely avoided if open and honest scientific discussion took place about the inherent problems. In this case, particularly, in all related papers it should be openly stated that the dielectric losses of TiO2 prevent building any applicable volume metamaterial, no matter how accurately the resonators are prepared.}
 } 
 \item{The spectra of dielectric rods parallel to the magnetic field were compared to that of dielectric spheres, pointing out their similarity. The resonant modes for low- and high-permittivity dielectrics were compared, too, to illustrate that continuous changes in the dielectric permittivity lead to a qualitative change -- a crossover of the Mie and Bragg resonances in the spectra.
 } 
 \item{A similar, and even more pronounced, change was observed in the dielectric rods parallel to the electric field. Depending on the filling fraction and permittivity contrast, the structure can behave differently in different portions of spectra: either as a one-dimensional photonic crystal, similar to a wire array, or exhibit negative index of refraction. By extensive parametric scans we demonstrated that the desirable latter mode of operation  cannot be achieved, for any known geometry, when the dielectric contrast is less than roughly 50, which precludes building negative-index metamaterial solely from any low-loss dielectric commonly used in photonics. 
 } 
-\item{On the example of a metallic sheet with slits parallel to the magnetic field we shown the effect of extraordinary transmission. We argue that it is mediated by standing surface plasmons, whose frequency depends on the slit periodicity and is almost independent of their width. Further we demonstrated that with increasing the metal thickness, the extraordinary transmission down-tunes with accordance to the dispersion of slot-waveguide modes.
+\item{On the example of a metallic sheet with slits parallel to the magnetic field we showed the effect of extraordinary transmission. We argue that it is mediated by standing surface plasmons,  frequency of which depends on the slit periodicity and is almost independent of their width. Further we demonstrated that with increasing the metal thickness, the extraordinary transmission down-tunes with accordance to the dispersion of slot-waveguide modes.
 } 
-\item{Finally, we shown that the extraordinary transmission mediates the propagation of waves also in fishnet metamaterials made of stacked perforated metallic sheets. Current-driven homogenisation plots for three different fishnets were compared to the scattering-parameter method, revealing that the latter is hardly applicable to this kind of structures, due to strong near-field coupling between neighbouring cells. Fishnets also support additional waves carried by quadrupole resonances, which was also observed in terahertz spectra of samples manufactured in our laboratory. Nevertheless, the simulations predicted that under a careful choice of geometry and illumination, fishnets exhibit a band of negative refractive index. 
+\item{Finally, we showed that the extraordinary transmission mediates the propagation of waves also in fishnet metamaterials made of stacked perforated metallic sheets. Current-driven homogenisation plots for three different fishnets were compared to the scattering-parameter method, revealing that the latter is hardly applicable to this kind of structures, due to strong near-field coupling between neighbouring cells. Fishnets also support additional waves carried by quadrupole resonances, which was also observed in terahertz spectra of samples manufactured in our laboratory. Nevertheless, the simulations predicted that under a careful choice of geometry and illumination, fishnets exhibit a band of negative refractive index. 
 }
 \end{enumerate}
 There remain many topics that are related to the subject of the present thesis, which were not discussed here, such as other crystal families than the square/cubic one, possibly including also quasicrystals or disorder. Except for the fishnet samples, the discussion was restricted to structures sharing symmetries with the incoming fields; more general classes of structures would involve bianisotropy/chirality. Also the nonlinear response of all structures can be studied, but one has to be aware that the Bloch's theorem and most of the presented theory assume a strictly linear response. However, direct numerical simulations of these phenomena can be presumably  achieved with a relatively easy adaptation of the simulation scripts.
@@ -67,7 +67,7 @@ The observation of a \textit{negative refraction} at the interface of air and a 
 
 Some metamaterials have such a strong spatial dispersion that their dispersion curves allow \textit{additional waves} sharing the same frequency and direction of propagation (Fig. \ref{fg_cdh2}a, \ref{fg_dcllactivity}), and this is another complication that precludes the description of the metamaterial by a single spectrum of $\Neff$. 
 
-When a scientific method is used beyond its scope, sometimes it leads to mathematical error or returns results which are obviously invalid. We have shown on several examples that the widely used \textit{scattering parameter method}, unfortunately, does not indicate its limits of applicability. By its means, a finite slab of a metamaterial can always be assigned some effective parameters (see page \pageref{sparamweaknesses}). However, even when the spatial dispersion is not strong enough to enable the existence of \textit{additional waves} as is the case of Fig. \ref{fg_cdh_yslit}a, the near-field coupling between neighbouring cells may be relatively strong. Then the scattering-parameter method fails to predict the behaviour of an infinite periodic lattice and $\Neff$ has to be determined by a more robust approach, such as the current-driven homogenisation. We suggest that the scattering-parameter method results should always be checked using the basic criteria of validity, such as the absence of non-resonant skips in the spectra, their compliance to Kramers-Kronig relations and their negligible sensitivity to the number of simulated unit cells.
+When a scientific method is used beyond its scope, sometimes it leads to a mathematical error or returns results which are obviously invalid. We showed on several examples that the widely used \textit{scattering parameter method}, unfortunately, does not indicate its limits of applicability. By its means, a finite slab of a metamaterial can always be assigned some effective parameters (see page \pageref{sparamweaknesses}). However, even when the spatial dispersion is not strong enough to enable the existence of \textit{additional waves} as is the case of Fig. \ref{fg_cdh_yslit}a, the near-field coupling between neighbouring cells may be relatively strong. Then the scattering-parameter method fails to predict the behaviour of an infinite periodic lattice and $\Neff$ has to be determined by a more robust approach, such as the current-driven homogenisation. We suggest that the scattering-parameter method results should always be checked using the basic criteria of validity, such as the absence of non-resonant skips in the spectra, their compliance to Kramers-Kronig relations and their negligible sensitivity to the number of simulated unit cells.
 %	- (the choice of branch for Neff is unambiguous by our retrieval procedure based on FDTD; yet it deserves
 %		proper physical interpretation in some structures)
 %		although often mentioned as such \cite{mortensen2010unambiguous}, the ambiguity of retrieved refractive index does not 
@@ -100,14 +100,14 @@ On the way to this tantalizing aim and to fast publication, too often they use a
 
 The rapid growth of the  number of papers related to metamaterials observed in the last two decades is certainly beneficial for the overall growth of knowledge. However, one should not forget about the price to be paid for it. Some of the concepts which were developed decades ago seem to be re-invented and published as novel. Aside of it, a significant portion of papers deals with the same class of structures, presenting only a minute quantitative improvement over the previous results, and they fail to bring any conceptual progress. This way, they dilute the information density of even high-impacted journals. This is exacerbated by the fact that, in the author's experience, even the metamaterial monographs are mostly assembled of separate papers that are unrelated to each other and by far not covering all relevant theory.
 
-In contrast, the genuinely tough issues seem to be rather underexposed. In the infrared and optical range, these are most importantly the ubiquitous dissipative losses. They are common for high-permitivity dielectrics and metals, where the permittivity of any known low-loss material appears insufficient for metamaterial behaviour \cite{dominec2014transition}. Also, all contemporary superconductors lose their superconducting properties above terahertz frequencies. To the knowledge of the author, all experimental demonstrations of such metamaterials are restricted to tiny samples which remain relatively transparent. Active amplification in unit cells, using either lumped components \cite{jelinek2011fet} or stimulated emission, may partially compensate the losses, but it appears very hard to achieve a sufficient linearity and homogeneity. 
+In contrast, the genuinely tough issues seem to be rather underexposed. In the infrared and optical range, these are most importantly the ubiquitous dissipative losses. They are common for high-permitivity dielectrics and metals, while the permittivity of any known low-loss material appears insufficient for metamaterial behaviour \cite{dominec2014transition}. Also, all contemporary superconductors lose their superconducting properties above terahertz frequencies. To the knowledge of the author, all experimental demonstrations of such metamaterials are restricted to tiny samples which remain relatively transparent. Active amplification in unit cells, using either lumped components \cite{jelinek2011fet} or stimulated emission, may partially compensate the losses, but it appears very hard to achieve necessary linearity and homogeneity. 
 % \cite{tassin2012comparison}
 % "First, reduction of losses by using crystalline metals and/or by introducing optically amplifying materials; developing three-dimensional isotropic designs rather than planar structures; and finding ways of mass producing large-area structures." -- Soukolis in http://eurekalert.org/pub_releases/2007-01/dl-mft010407.php?light
 %Compared to the publication boom and its optimistic aims, the metamaterials find their way to applications markedly slowly. The novel phenomena such as cloaking or sub-wavelength imaging are still confined to laboratory demonstrations, usually for structures not much bigger than the wavelength. The research of semiconductors in the first decades did not bring any notable applications, either, but even at that time it had to be clear that semiconductors present a wholly new field of basic material research. On the other hand, the recent progress in the field of metamaterials resembles the applied research: It is mostly a \textit{design} and \textit{optimisation} of already known structures towards some particular behaviour, rather than a search for new fundamental physics. 
 
-The sub-diffraction imaging has yet another fundamental issue aside of the dissipative losses. It requires to suppress the spatial dispersion, which arises from nonzero dimensions of the unit cells. If the future progress in nanotechnology succeeds overcoming this obstacle, the question remains whether it would not become also more than sufficient for the fabrication of superior measurement techniques, completely eliminating the need of any metamaterial super- or hyper-lens. 
+The sub-diffraction imaging has yet another fundamental issue aside of the dissipative losses. It requires to suppress the spatial dispersion, which arises from nonzero dimensions of the unit cells. If the future progress in nanotechnology succeeds in overcoming this obstacle, the question remains whether it would not become also more than sufficient for the fabrication of superior measurement techniques, completely eliminating the need of any metamaterial super- or hyper-lens. 
 
-The challenges which the metamaterial research faces nowadays may be once overcome. However, it appears much more likely to the author that the related research will be beneficial indirectly, by inciting development in an unexpected direction, be it in nanofabrication, material science, solid-state physics, nonlinear optics, theoretical electrodynamics, or any other field of physics and technology.
+The challenges which the metamaterial research faces nowadays may be overcome once. However, it appears much more likely to the author that the related research will be beneficial indirectly, by inciting development in an unexpected direction, be it in nanofabrication, material science, solid-state physics, nonlinear optics, theoretical electrodynamics, or any other field of physics and technology.
 
 It would be beneficial to avoid regarding metamaterials as mere means for putting into practice the notorious -- but so far, mostly elusive -- list of practical \textit{tasks} they seem to promise. Instead, in line with the quotation from the start of this section, it can be much more inspiring and useful to \textit{long for the endless immensity} of different phenomena that emerge from the wave interaction with periodic structures.
 %and for accurate theoretical description thereof. 
